# rs-chat

./: Cargo.toml  README.md  log4rs.yaml
.github/workflows/: ci.yml
chat_client/: Cargo.toml  README.md
chat_client/src/: app.rs  chat.rs  consts.rs  helper.rs  helpers.rs  lib.rs  logger.rs  logging.rs  logs.rs  main.rs  notifications.rs  render_parts.rs  requests.rs  room.rs  room_event.rs  task.rs  ws_connection.rs  ws_handler.rs  ws_mock.rs
chat_client/src/actions/: echo.rs  ls.rs  mod.rs
chat_client/src/components/: context.rs  log_view.rs  mod.rs  notification_view.rs  popup.rs  popup_options.rs  room_join.rs  room_switch.rs  root.rs  screen.rs  text_popup.rs  user_view.rs
chat_client/src/config/: args.rs  file.rs  logging.rs  mod.rs
chat_client/src/event/: event_type.rs  extentions.rs  mod.rs  room.rs
chat_lib/: Cargo.toml
chat_lib/src/: consts.rs  discovery.rs  lib.rs  prelude.rs  ratatui_span.rs  types.rs  ws_connection.rs  ws_message.rs  ws_mock.rs
chat_server/: Cargo.toml  README.md
chat_server/src/: app_error.rs  config.rs  consts.rs  lib.rs  limited_string.rs  logging.rs  loops.rs  main.rs  routes.rs  types.rs  ws_fairing.rs  ws_handler.rs
chat_server/src/ws/: consts.rs  fairing.rs  handler.rs  mod.rs  room.rs  router.rs  routes.rs
const_resources/: tui_help.md
eszi_client/: Cargo.toml
eszi_client/src/: app.rs  consts.rs  helpers.rs  logger.rs  main.rs  room_event.rs  ws_handler.rs
eszi_client/src/client_utils/: app.rs  consts.rs  mod.rs  ws_handler.rs
eszi_lib/: Cargo.toml
eszi_lib/src/: lib.rs  types.rs
eszi_lib/src/messages/: types.rs
eszi_server/: Cargo.toml
eszi_server/src/: loops.rs  main.rs  routes.rs  types.rs
eszi_server/src/server_utils/: loops.rs  mod.rs  routes.rs  types.rs
src/messages/: types.rs
