[workspace]
resolver = "3"
members = ["chat_client", "chat_lib", "chat_server"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

unwrap_used = "deny"
needless_match = "deny"
redundant_pattern = "deny"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
semver = { version = "1.0.27", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0.101"
log = "0.4.29"
serde = "1.0.228"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
