[workspace]
members = ["chat_client", "chat_lib", "chat_server"]
resolver = "3"

[workspace.package]
version = "0.1.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

unwrap_used = "deny"
needless_match = "deny"
redundant_pattern = "deny"

# if possible use the `log` crate instead
print_stdout = "deny"
print_stderr = "deny"

[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.dependencies]
axum = { version = "0.8.9", features = ["ws", "json"] }
tokio = { version = "1.52.2", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio-tungstenite = "0.29.0"
futures = "0.3.32"
thiserror = "2.0.18"
anyhow = "1.0.102"
log = "0.4.29"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
