[package]
name = "chat_client"
version = "0.1.0"
edition = "2024"
authors = ["Krickij Lászlo <krickijlaszlo@gmail.com>"]
description = """
Chat client

The chat client for rs-chat
Check it out at https://github.com/SpawnCycle/rs-chat
"""

[lints]
workspace = true

[dependencies]
chat_lib = { path = "../chat_lib", features = ["ratatui_span"] }

log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

url = { version = "2.5.8", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive"] }
crossterm = "0.29.0"
futures = "0.3.31"
log4rs = "1.4.0"
ratatui = "0.29.0"
serde_json = "1.0.149"
tokio-tungstenite = "0.28.0"
dirs = "6.0.0"
tui-textarea = "0.7.0"
toml = "1.0.1"
tui-logger = "0.18.1"
