[package]
name = "chat_client"
version.workspace = true
edition = "2024"
authors = ["Krickij Lászlo <krickijlaszlo@gmail.com>"]
description = """
Chat client

The chat client for rs-chat
Check it out at https://github.com/SpawnCycle/rs-chat
"""

[lints]
workspace = true

[dev-dependencies]
chat_lib = { path = "../chat_lib", features = ["mock_ws"] }


[dependencies]
chat_lib = { path = "../chat_lib", features = ["ws_conn"] }

log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }

url = { version = "2.5.8", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.3", features = ["json"] }
crossterm = "0.29.0"
futures = "0.3.32"
ratatui = "0.30.0"
serde_json = "1.0.149"
dirs = "6.0.0"
ratatui-textarea = "0.9.1"
toml = "1.1.2"
tui-logger = "0.18.2"
