[package]
name = "chat_client"
version.workspace = true
edition = "2024"
authors = ["Krickij Lászlo <krickijlaszlo@gmail.com>"]
description = """
Chat client

The chat client for rs-chat
Check it out at https://github.com/SpawnCycle/rs-chat
"""

[lints]
workspace = true

[dependencies]
chat_lib = { path = "../chat_lib", features = ["ws_conn", "client"] }

anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

clap = { version = "4.6.2", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["json"] }
strum = { version = "0.28.0", features = ["derive"] }
url = { version = "2.5.8", features = ["serde"] }

crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.33"
ratatui = "0.30.2"
ratatui-textarea = "0.9.2"
serde_json = "1.0.150"
toml = "1.1.3"
tui-logger = "0.18.3"
