[package]
name = "chat_lib"
version = "0.1.0"
edition = "2024"
authors = ["Krickij Lászlo <krickijlaszlo@gmail.com>"]
description = """
Library for chat
"""

[lints]
workspace = true

[features]
default = []
ws_message = ["dep:rocket_ws"]

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
semver = { workspace = true }

names = "0.14.0"
rocket_ws = { version = "0.1.1", optional = true }
serde_json = "1.0.149"
