[package]
name = "chat_lib"
version.workspace = true
edition = "2024"
authors = ["Krickij Lászlo <krickijlaszlo@gmail.com>"]
description = """
Library for chat
"""

[lints]
workspace = true

[features]
default = []

ws_conn = ["dep:tokio-tungstenite"]
mock_ws = ["ws_conn"]
ws_message = ["dep:axum"]

[dependencies]
tokio-tungstenite = { workspace = true, optional = true }
anyhow = { workspace = true }

axum = { workspace = true, optional = true }

serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
semver = { workspace = true }
futures = { workspace = true }

serde_json = "1.0.149"
names = "0.14.0"
