[package]
name = "chat_lib"
version.workspace = true
edition = "2024"
authors = ["Krickij Lászlo <krickijlaszlo@gmail.com>"]
description = """
Library for chat
"""

[lints]
workspace = true

[features]
default = []

ws_msg = ["dep:tokio-tungstenite"]
ws_conn = ["dep:tokio-tungstenite"]
client = ["dep:tokio-tungstenite"]
server = ["dep:axum"]

[dependencies]
axum = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }

anyhow = { workspace = true }
futures = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

serde_json = "1.0.150"
