[package]
name = "chat_server"
version.workspace = true
edition = "2024"
authors = ["Krickij Lászlo <krickijlaszlo@gmail.com>"]
description = """
A chat server
"""

[lints]
workspace = true

[dependencies]
chat_lib = { path = "../chat_lib", features = ["server"] }

anyhow = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

tower = { version = "0.5.3", features = ["full", "log"] }
tower-http = { version = "0.6.11", features = ["trace"] }

log4rs = { version = "1.4.0", features = ["all_components"] }
tracing = { version = "0.1.44", features = ["log-always"] }
serde_json = "1.0.150"
rustrict = "0.7.38"
names = "0.14.0"
dirs = "6.0.0"
