[package]
name = "eszi_client"
version = "0.1.0"
edition = "2024"
authors = ["Krickij Lászlo <krickijlaszlo@gmail.com>"]
description = """
Eszichat client
"""

[dependencies]
eszi_lib = { path = "../eszi_lib" }

crossterm = "0.29.0"
futures = "0.3.31"
log = "0.4.28"
log4rs = "1.4.0"
ratatui = "0.29.0"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = "1.47.1"
tokio-tungstenite = "0.27.0"
tui-textarea = "0.7.0"
tungstenite = "0.27.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
