[package]
name = "eszi_server"
version = "0.1.0"
edition = "2024"
authors = ["Krickij Lászlo <krickijlaszlo@gmail.com>"]
description = """
Server for eszichat
"""

[dependencies]
eszi_lib = { path = "../eszi_lib" }

log = "0.4.28"
log4rs = "1.4.0"
names = "0.14.0"
rocket = "0.5.1"
rocket_ws = "0.1.1"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = "1.47.1"
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
